--- a/package.json
+++ b/package.json
@@ -9,11 +9,20 @@
   "bin": "build/cli.js",
   "devDependencies": {
     "@types/node": "^20.8.8",
+    "@typescript-eslint/eslint-plugin": "^6.4.0",
+    "@typescript-eslint/parser": "^6.9.0",
+    "eslint": "^8.0.1",
+    "eslint-config-prettier": "^9.0.0",
+    "eslint-config-standard-with-typescript": "^39.1.1",
+    "eslint-plugin-import": "^2.25.2",
+    "eslint-plugin-n": "^15.0.0 || ^16.0.0 ",
+    "eslint-plugin-promise": "^6.0.0",
     "nodemon": "^3.0.1",
     "parcel": "^2.9.3",
     "path-browserify": "^1.0.0",
+    "prettier": "^3.0.3",
     "process": "^0.11.10",
-    "typescript": "^5.2.2"
+    "typescript": "*"
   },
   "resolutions": {
     "htmlnano": "2.0.3"
