--- a/package.json
+++ b/package.json
@@ -18,13 +18,14 @@
     "eslint-plugin-n": "^15.0.0 || ^16.0.0 ",
     "eslint-plugin-promise": "^6.0.0",
     "nodemon": "^3.0.1",
-    "parcel": "^2.9.3",
-    "path-browserify": "^1.0.0",
     "prettier": "^3.0.3",
-    "process": "^0.11.10",
     "typescript": "*"
   },
   "resolutions": {
     "htmlnano": "2.0.3"
+  },
+  "dependencies": {
+    "parcel": "^2.10.1",
+    "zod": "^3.22.4"
   }
 }
