--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -8,5 +8,7 @@
     "ecmaVersion": "latest",
     "sourceType": "module"
   },
-  "rules": {}
+  "rules": {
+    "@typescript-eslint/explicit-function-return-type": "off"
+  }
 }
