--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "htmlnano": "2.0.3"
   },
   "dependencies": {
+    "@faker-js/faker": "^8.2.0",
     "parcel": "^2.10.1",
     "zod": "^3.22.4"
   }
