--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "eslint-plugin-promise": "^6.0.0",
     "nodemon": "^3.0.1",
     "prettier": "^3.0.3",
+    "process": "^0.11.10",
     "typescript": "*"
   },
   "resolutions": {
