--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
   },
   "bin": "build/cli.js",
   "devDependencies": {
+    "@parcel/transformer-sass": "^2.10.1",
+    "@types/d3": "^7.4.2",
     "@types/node": "^20.8.8",
     "@typescript-eslint/eslint-plugin": "^6.4.0",
     "@typescript-eslint/parser": "^6.9.0",
@@ -29,8 +31,10 @@
   },
   "dependencies": {
     "@faker-js/faker": "^8.2.0",
+    "d3": "^7.8.5",
     "danfojs": "^1.1.2",
     "parcel": "^2.10.1",
+    "tabulator-tables": "^5.5.2",
     "ts-pattern": "^5.0.5",
     "zod": "^3.22.4"
   }
