--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
   },
   "dependencies": {
     "@faker-js/faker": "^8.2.0",
+    "@parcel/config-default": "^2.10.1",
+    "@parcel/core": "^2.10.1",
     "@parcel/transformer-sass": "^2.10.1",
     "d3": "^7.8.5",
     "danfojs": "^1.1.2",
