--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "tabulator-tables": "^5.5.2",
     "ts-pattern": "^5.0.5",
     "typescript": "*",
+    "yargs": "^17.7.2",
     "zod": "^3.22.4"
   },
   "resolutions": {
