implement cli -> builder bridge

--- a/package.json
+++ b/package.json
@@ -9,8 +9,11 @@
   },
   "bin": "build/cli.js",
   "devDependencies": {
+    "@types/base-64": "^1.0.1",
     "@types/d3": "^7.4.2",
     "@types/node": "^20.8.8",
+    "@types/pako": "^2.0.2",
+    "@types/yargs": "^17.0.29",
     "@typescript-eslint/eslint-plugin": "^6.4.0",
     "@typescript-eslint/parser": "^6.9.0",
     "buffer": "^5.5.0||^6.0.0",
@@ -28,8 +31,10 @@
     "@parcel/config-default": "^2.10.1",
     "@parcel/core": "^2.10.1",
     "@parcel/transformer-sass": "^2.10.1",
+    "base-64": "^1.0.0",
     "d3": "^7.8.5",
     "danfojs": "^1.1.2",
+    "pako": "^2.1.0",
     "parcel": "^2.10.1",
     "tabulator-tables": "^5.5.2",
     "ts-pattern": "^5.0.5",
