--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@parcel/core": "^2.10.1",
     "@parcel/transformer-sass": "^2.10.1",
     "base-64": "^1.0.0",
+    "csv-parse": "^5.5.2",
     "d3": "^7.8.5",
     "danfojs": "^1.1.2",
     "pako": "^2.1.0",
