--- a/package.json
+++ b/package.json
@@ -2,12 +2,15 @@
   "name": "sidd",
   "version": "1.0.0",
   "scripts": {
-    "build": "tsc && chmod a+x build/cli/cli.js",
+    "build": "tsc && chmod a+x build/cli/cli.js && parcel build src/site/codebook.html --dist-dir ./build",
     "sidd": "ts-node src/cli/cli.ts",
     "start-cli": "nodemon",
-    "start": "ts-node src/cli/cli.ts serve"
+    "start": "parcel src/site/codebook.html"
   },
   "bin": "build/cli/cli.js",
+  "alias": {
+    "danfojs": "danfojs/dist/danfojs-browser/src/index.js"
+  },
   "devDependencies": {
     "@types/base-64": "^1.0.1",
     "@types/d3": "^7.4.2",
@@ -25,6 +28,7 @@
     "eslint-plugin-promise": "^6.0.0",
     "nodemon": "^3.0.1",
     "prettier": "^3.0.3",
+    "process": "^0.11.10",
     "ts-node": "^10.9.1"
   },
   "dependencies": {
