compress stat files

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "danfojs": "danfojs/dist/danfojs-browser/src/index.js"
   },
   "devDependencies": {
+    "@parcel/transformer-sass": "2.10.1",
     "@types/base-64": "^1.0.1",
     "@types/d3": "^7.4.2",
     "@types/node": "^20.8.8",
@@ -20,6 +21,7 @@
     "@typescript-eslint/eslint-plugin": "^6.4.0",
     "@typescript-eslint/parser": "^6.9.0",
     "buffer": "^5.5.0||^6.0.0",
+    "d3": "^7.8.5",
     "eslint": "^8.0.1",
     "eslint-config-prettier": "^9.0.0",
     "eslint-config-standard-with-typescript": "^39.1.1",
@@ -27,22 +29,18 @@
     "eslint-plugin-n": "^15.0.0 || ^16.0.0 ",
     "eslint-plugin-promise": "^6.0.0",
     "nodemon": "^3.0.1",
+    "parcel": "^2.10.1",
     "prettier": "^3.0.3",
     "process": "^0.11.10",
+    "tabulator-tables": "^5.5.2",
     "ts-node": "^10.9.1"
   },
   "dependencies": {
     "@faker-js/faker": "^8.2.0",
-    "@parcel/config-default": "^2.10.1",
-    "@parcel/core": "^2.10.1",
-    "@parcel/transformer-sass": "^2.10.1",
     "base-64": "^1.0.0",
     "csv-parse": "^5.5.2",
-    "d3": "^7.8.5",
     "danfojs": "^1.1.2",
     "pako": "^2.1.0",
-    "parcel": "^2.10.1",
-    "tabulator-tables": "^5.5.2",
     "ts-pattern": "^5.0.5",
     "typescript": "*",
     "yargs": "^17.7.2",
